--- a/arquivo-1.html
+++ b/arquivo-1.html
@@ -9,5 +9,9 @@
         <p>Primeiro Parágrafo</p>
 
         <p>Segundo Parágrafo</p>
+
+        <p>Terceiro parágrafo</p>
+
+        <p>Quarto parágrafo teste</p>
     </body>
 </html>
