inserindo arquivo-1 novamente direto

--- a/arquivo-1.html
+++ b/arquivo-1.html
@@ -11,6 +11,9 @@
         <p>Segundo Parágrafo</p>
 
         <p>Terceiro parágrafo</p>
+
+        <p>TESTE</p>
+        
         
     </body>
 </html>
