Revert "revertendo a inserção do quinto paragrafo"
This reverts commit 4b009f4cb6e0dbde82fff3448d434b9aec2d3d89.

--- a/arquivo-2.html
+++ b/arquivo-2.html
@@ -11,6 +11,10 @@
         <p>Segundo Parágrafo</p>
 
         <p>Terceiro parágrafo</p>
+
+        <p>Quarto parágrafo teste</p>
+
+        <p>Quinto parágrafo</p>
         
     </body>
 </html>
