--- a/arquivo-1.html
+++ b/arquivo-1.html
@@ -13,6 +13,8 @@
         <p>Terceiro parágrafo</p>
 
         <p>Quarto parágrafo</p>
-        
+
+        <p>Quinto parágrafo</p>
+                
     </body>
 </html>
