--- a/arquivo-1.html
+++ b/arquivo-1.html
@@ -15,6 +15,8 @@
         <p>Quarto parágrafo</p>
 
         <p>Quinto parágrafo</p>
+
+        <p>Sexto parágrafo</p>
                 
     </body>
 </html>
