esta foi uma alteração de cor dos parágrafos

--- a/arquivo-1.html
+++ b/arquivo-1.html
@@ -4,6 +4,13 @@
         <title>Arquivo-1</title>
     </head>
     <body>
+
+        <style>
+            p {
+                color: rgb(8, 60, 218)
+            }
+        </style>
+
         <h1>Arquivo-1</h1>
 
         <p>Primeiro Parágrafo</p>
