esta foi a adição do setimo paragrafo

--- a/arquivo-1.html
+++ b/arquivo-1.html
@@ -17,6 +17,8 @@
         <p>Quinto parágrafo</p>
 
         <p>Sexto parágrafo</p>
+
+        <p>Oitavo parágrafo</p>
                 
     </body>
 </html>
