--- a/arquivo-1.html
+++ b/arquivo-1.html
@@ -9,6 +9,9 @@
             p {
                 color: rgb(218, 103, 8)
             }
+            hi {
+                color:rgb(187, 255, 0)
+            }
         </style>
 
         <h1>Arquivo-1</h1>
