colorindo a primeira letra de cada parágrafo

--- a/arquivo-1.html
+++ b/arquivo-1.html
@@ -9,6 +9,9 @@
             p {
                 color: rgb(218, 103, 8)
             }
+            p::first-letter {
+                 color:rgb(121, 32, 9)
+            }
         </style>
 
         <h1>Arquivo-1</h1>
